added swagger plugin, added keyword query for rooms
