# server/src/room/room.controller.ts
@@ -7,12 +7,12 @@ import {
   Post,
   Put,
   UseGuards,
+  Query,
 } from '@nestjs/common';
 import { RoomService } from './room.service';
 import { CreateRoomDto } from './dto/create-room.dto';
 import { JwtAuthGuard } from '../auth/jwt-auth.guard';
 import { AvailableRoomsResponseDto } from './dto/available-rooms.dto';
-import { ApiExtraModels, ApiResponse } from '@nestjs/swagger';
 import { AllRoomsResponseDto } from './dto/fetch-rooms.dto';
 
 @UseGuards(JwtAuthGuard)
@@ -30,28 +30,18 @@ export class RoomController {
     return await this.roomService.edit(id, { ...payload });
   }
 
-  @ApiExtraModels(AvailableRoomsResponseDto)
-  @ApiResponse({
-    status: 200,
-    type: AvailableRoomsResponseDto,
-    isArray: true,
-  })
   @Get('available')
   async getAvailableRooms(): Promise<AvailableRoomsResponseDto[]> {
     return await this.roomService.fetchAvailableRooms();
   }
 
-  @ApiExtraModels(AllRoomsResponseDto)
-  @ApiResponse({
-    status: 200,
-    type: AllRoomsResponseDto,
-    isArray: true,
-  })
   @Get(
     '/all',
   ) /** <-- We can create a separate GET /api/rooms endpoint for this, but we'll just do it this way instead */
-  async getRooms(): Promise<AllRoomsResponseDto[]> {
-    return await this.roomService.fetchRooms();
+  async getRooms(
+    @Query('keyword') keyword?: string,
+  ): Promise<AllRoomsResponseDto[]> {
+    return await this.roomService.fetchRooms(keyword);
   }
 
   @Delete('/:id')
